scss/_common.scss
@use 'default';
@use 'grid';

* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

body {
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    text-rendering: optimizeLegibility;
    background-color: white;
}

code {
    font-size: .875em;
    color: #880000;
    white-space: nowrap;
    font-family: 'Source Code Pro', monospace;
}

pre {
    font-family: 'Source Code Pro', monospace;
    overflow-x: auto;
    padding: 1em 0.8em;
    background: #F0F0F0;
    border-radius: 4px;
    font-size: 75%;
}

pre > code {
    font-size: 100%;
}

p, li, pre, figure, h1, h2, h3, h4 {
    margin-bottom: 1rem;
}

h1, h2, h3, h4, pre, table, img {
    break-inside: avoid;
}

h1, h2, h3, h4 {
    margin-top: 2rem;
}

ul, ol, figure, pre, .file-title, .terminal {
    margin-top: 1rem;
}

/* hack that avoid page break after h2 et h3 */
h2::after, h3::after, h4::after {
    content: "";
    display: block;
    height: 100px;
    margin-bottom: -100px;
}

p, li {
    text-align: justify;
}

li {
    margin-left: 30px;
}

figure {
    text-align: center;
    break-inside: avoid;

    figcaption {
        text-align: center;
        font-style: italic;
        font-size: 0.8em;
    }

    pre {
        text-align: left;
    }

    table {
      margin: 1rem auto;
    }

    img, canvas {
        max-width: 100%;

        &.half {
            width: 50%;
        }
        
        &.third {
            width: 33%;
        }
        
        &.third2 {
            width: 66%;
        }
        
        &.fourth {
            width: 25%;
        }
        
        &.fourth3 {
            width: 75%;
        }
        
        &.zoom {
            width: 75%;
        }
        
        &.max {
            width: 100%;
        }
    }
}

h1 > small {
    display: block;
    font-size: 0.6em;
    font-weight: normal;
    color: gray;
    margin: 1rem 0;
}

.row {
    display: grid;
    grid-template-columns: repeat(12, 1fr);
    column-gap: 10px;
    justify-items: stretch;
    align-items: stretch;
    justify-content: stretch;
    align-content: stretch;

    .span2 {
        grid-column-end: span 2;
    }

    .span3 {
        grid-column-end: span 3;
    }

    .span4 {
        grid-column-end: span 4;
    }

    .span5 {
        grid-column-end: span 5;
    }

    .span6 {
        grid-column-end: span 6;
    }

    .span7 {
        grid-column-end: span 7;
    }

    .span8 {
        grid-column-end: span 8;
    }

    .span9 {
        grid-column-end: span 9;
    }

    .span10 {
        grid-column-end: span 10;
    }

    .span11 {
        grid-column-end: span 11;
    }
}

.indent {
    padding-left: 3ex;
}

.center {
    text-align: center;
}

.big {
    font-size: 1.5em;
}

.right {
	text-align: right;
}

.break-before {
	page-break-before: always;
}

.break-after {
	page-break-after: always;
}

code.wrap {
	white-space: pre-wrap !important;
}

.terminal {
    background-color: darkslategray;
    color: white;
    font-family: consolas, monospace;
    white-space: pre;
    padding: 1rem;
    font-size: 0.9em;
    margin-bottom: 1rem;

    &::before {
        content: "Terminal";
        display: block;
        background-color: black;
        text-align: center;
        margin: -1rem;
        padding: 0.5rem;
        margin-bottom: 1rem;
    }
}

.file-title {
    margin-bottom: -1rem !important;
    font-family: consolas, monospace;
    font-size: 0.9em;
    color: white;
    padding: 0.5rem;
    text-align: center;
    background-color: #686868;
}

table {
    border-collapse: collapse;
    border: 2px solid black;

    td {
        border: 1px solid black;
    }

    th {
        border: 2px solid black;
    }

    td, th {
        padding: 0.5em;
        text-align: center;
    }
}

.middle {
  display: flex;
  flex-flow: column nowrap;
  justify-content: center;
  align-items: stretch;
}

.nowrap {
  white-space: nowrap;
}

.wrap {
  white-space: normal;
  overflow-wrap: break-word;
}

